[package]
name = "jp-study-xbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
wiremock = "0.5.17"
